<resources>
    <string name="app_name">Sensorics</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="actions">Actions</string>
    <string name="temperature">Temperature</string>
    <string name="default_temperature" translatable="false">0°C</string>
    <string name="light">Light</string>
    <string name="default_light" translatable="false">0.00%</string>
    <string name="humidity">Humidity</string>
    <string name="default_humidity" translatable="false">0.00%</string>
    <string name="pressure">Pressure</string>
    <string name="default_pressure" translatable="false">0000.00hPa</string>
    <string name="magnetometer_x">Magnetometer X</string>
    <string name="default_magnetometer_x" translatable="false">0.00µT</string>
    <string name="magnetometer_y">Magnetometer Y</string>
    <string name="default_magnetometer_y" translatable="false">0.00µT</string>
    <string name="magnetometer_z">Magnetometer Z</string>
    <string name="default_magnetometer_z" translatable="false">0.00µT</string>
    <string name="accelerometer_x">Accelerometer X</string>
    <string name="default_accelerometer_x" translatable="false">0.00mg</string>
    <string name="accelerometer_y">Accelerometer Y</string>
    <string name="default_accelerometer_y" translatable="false">0.00mg</string>
    <string name="accelerometer_z">Accelerometer Z</string>
    <string name="default_accelerometer_z" translatable="false">0.00mg</string>
    <string name="gyro_x">Gyroscope X</string>
    <string name="default_gyro_x" translatable="false">0.00dps</string>
    <string name="gyro_y">Gyroscope Y</string>
    <string name="default_gyro_y" translatable="false">0.00dps</string>
    <string name="gyro_z">Gyroscope Z</string>
    <string name="default_gyro_z" translatable="false">0.00dps</string>
    <string name="battery_level">Battery Level</string>
    <string name="default_battery_level" translatable="false">0%</string>
    <string name="bt_disabled">Bluetooth is disabled</string>
    <string name="enable">Enable</string>
    <string name="add">Add</string>
    <string name="phone_number">Phone number</string>
    <string name="message_hint">Message</string>
    <string name="delete">Delete</string>
    <string name="condition_less">Less</string>
    <string name="condition_equal">Equal</string>
    <string name="condition_more">More</string>
    <string name="condition_changed">Changed</string>
    <string name="condition_value_hint">Value</string>
    <string name="condition_dialog_set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="vibration">Vibration</string>
    <string name="action_removed">%1$s removed!</string>
    <string name="sensor_card_image_content_description">Sensor card image</string>
    <string name="service_notification_title">Sensorics</string>
    <string name="service_notification_content">Sensorics is scanning</string>
    <string name="set_action_hint">There are no actions.\nPress plus (+) to add a new action.</string>
    <string name="no_rest_headers">There are no headers. Press plus (+) to add a new header.</string>
    <string name="no_rest_httpgetparams">There are no HTTP Get Params. Press plus (+) to add a new HTTP Param.</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="notification">Notification</string>
    <string name="google_iot_cloud" translatable="false">Google IOT Cloud</string>
    <string name="http_backend" translatable="false">Http Backend</string>
    <string name="mqtt_backend" translatable="false">MQTT Backend</string>
    <string name="no_devices_plus_button_label">There are no devices. Press plus (+) to add a new device.</string>
    <string name="no_unsorted_devices">There are no any unsorted devices.</string>
    <string name="message_no_scanned_devices">There are no new nearby devices</string>
    <string name="name">Name</string>
    <string name="project_id_hint">ProjectId</string>
    <string name="region">Region</string>
    <string name="device_registry">Device Registry</string>
    <string name="device">Device</string>
    <string name="private_key">Private Key</string>
    <string name="private_key_click">Touch to choose</string>
    <string name="not_valid_file_pkcs8">Selected file is not valid PKCS8 file</string>
    <string name="rest_method_post" translatable="false">POST</string>
    <string name="rest_method_get" translatable="false">GET</string>
    <string name="rest_method_put" translatable="false">PUT</string>
    <string name="url" translatable="false">URL</string>
    <string name="publish_day">Days</string>
    <string name="publish_hour">Hour</string>
    <string name="publish_min">Min</string>
    <string name="publish_sec">Sec</string>
    <string name="publish_millis">Milli</string>
    <string name="sending_interval">Sending Interval</string>
    <string name="last_data_sent">"Last data sent at: "</string>
    <string name="snackbar_stop_scanning">Please stop scanning first</string>
    <string name="test">Test</string>
    <string name="please_fill_blanks">Please fill the blanks</string>
    <string name="please_valid_port">Please choose a valid port</string>
    <string name="http_get_params_not_valid">HTTP Get Params is not valid.</string>
    <string name="data_string_not_valid">DataString is not valid.</string>
    <string name="testings_started">Testing Started</string>
    <string name="update">Update</string>
    <string name="test_failed">Test Failed</string>
    <string name="test_succeeded">Test Succeeded</string>
    <string name="snackbar_permission_message">You can always set permissions</string>
    <string name="snackbar_settings">Settings</string>
    <string name="devices">Devices</string>
    <string name="are_you_sure">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="headers">Headers (%d)</string>
    <string name="http_get_params">HTTP Get Params (%d)</string>
    <string name="title_activity_rest_header">REST Header</string>
    <string name="title_activity_rest_http_get_params">REST HTTP Get Params</string>
    <string name="rest_headers_title">Headers</string>
    <string name="rest_http_get_params_title">HTTP Get Params</string>
    <string name="value">Value</string>
    <string name="key">Key</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="values_cannot_empty">Values cannot be empty</string>
    <string name="clientId">Client Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="topic">Topic</string>
    <string name="quality_of_service">Quality Of Service</string>
    <string name="qos_1" translatable="false">1</string>
    <string name="qos_0" translatable="false">0</string>
    <string name="qos_2" translatable="false">2</string>
    <string name="dataString">Data String</string>
    <string name="general_placholders_title" formatted="true" translatable="false"><b>General: </b></string>
    <string name="placeholders_explanation" formatted="true" translatable="false">Strings not fully substituted (if a value is missing from the reading) will not be sent. $ should not be used since any detected unknown embeddable values will result in the data not sending. <b>Important: </b> For more information <a href="https://github.com/aconno/Sensorics/blob/master/DataStringUsability.md">click</a>\n</string>
    <string name="specific_values" formatted="true"><b>Specific values:</b></string>
    <string name="specific_values_intro" formatted="true">Here is a full list of specific values for each supported device. There is also a search bar in order to make it easier to find values for a specific device.</string>
    <string name="publisher_info_title">Info</string>
    <string name="title_select_publish">Select Publisher</string>
    <string name="title_app_settings">App Settings</string>
    <string name="default_data_string" translatable="false">
        {\"value\" : \"$value\",\"timestamp\" : \"$ts\",\"type\" : \"$name\",\"device\" : \"$device\",\"deviceGroup\" : \"$group\",\"rssi\" : \"$rssi\"}
    </string>
    <string name="no_publishers_found">There are no backends.\nPress plus (+) to add a new backend.</string>
    <string name="no_devices_found">There are no saved devices.</string>
    <string name="reading_value_acnrange" translatable="false">%1$d mm</string>
    <string name="rssi" translatable="false">RSSI</string>
    <string name="title_publish_list">Backends</string>
    <string name="contentDescriptionUseless" translatable="false">deco</string>
    <string name="title_action_details">Action</string>
    <string name="content_description_icon_device">Device icon</string>
    <string name="label_device">Device</string>
    <string name="hint_action_name">Action name</string>
    <string name="label_condition">Condition</string>
    <string name="label_outcome">Outcome</string>
    <string name="message_time_from_not_selected">Time from not selected</string>
    <string name="message_time_to_not_selected">Time to not selected</string>
    <string name="label_time_from">Time from</string>
    <string name="label_time_to">Time to</string>
    <string name="scan_mode_low_latency">Low Latency</string>
    <string name="scan_mode_balanced">Balanced</string>
    <string name="scan_mode_low_power">Low Power</string>
    <string name="scan_mode_invalid">Invalid</string>
    <string name="message_no_saved_devices_cannot_open_actions">Please add a device first</string>
    <string name="title_device_list">Devices</string>
    <string name="active">Active</string>
    <string name="rename">Rename</string>
    <string name="deactivate_all_actions">Deactivate all actions</string>
    <string name="activate_all_actions">Activate all actions</string>
    <string name="message_action_active_state_not_selected">Active state not selected</string>
    <string name="message_no_devices">There are no devices</string>
    <string name="message_save_unsuccessful">Save unsuccessful</string>
    <string name="message_action_name_blank">Action name cannot be blank</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="usecases">Use Cases</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="config">Config</string>
    <string name="logging">Logging</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="software_version">Software Version</string>
    <string name="hardware_version">Hardware Version</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="mac_address">Mac Address</string>
    <string name="manufacturer_info">Manufacturer Info</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="export_all">Export all</string>
    <string name="import_all">Import</string>
    <string name="dfu">Update Firmware</string>
    <string name="cache">Cache</string>
    <string name="export_selected">Export</string>
    <string name="share_selected_as_text">Share JSON text</string>
    <string name="share_selected_as_file">Share JSON file</string>
    <string name="select_all">Select all</string>
    <string name="share_all_as_text">Share all as JSON text</string>
    <string name="share_all_as_file">Share all as JSON file</string>
    <string name="virtual_scanning_sources">Virtual scanning sources</string>
    <string name="move_devices_to_group">Move to group</string>
    <string name="remove_devices_from_group">Remove from group</string>
    <string name="rename_device">Rename device</string>
    <string name="search_by_device_name">Search by device name</string>
    <string name="delete_devices">Remove</string>
</resources>