<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:enabled="true"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:orderInCategory="1"
        android:title="@string/select_all"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_devices_to_group"
        android:title="@string/move_devices_to_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_devices_from_group"
        android:title="@string/remove_devices_from_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename_device"
        android:title="@string/rename_device"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activate_all_actions"
        android:title="@string/activate_all_actions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deactivate_all_actions"
        android:title="@string/deactivate_all_actions"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_devices"
        android:title="@string/delete_devices"
        app:showAsAction="never" />
</menu>