<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start_actions_activity"
        android:title="@string/actions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_usecases_activity"
        android:title="@string/usecases"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_config_activity"
        android:title="@string/config"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_logging_activity"
        android:title="@string/logging"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_connect"
        android:checkable="true"
        android:checked="true"
        android:title="@string/disconnect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_dfu"
        android:title="@string/dfu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cache"
        android:title="@string/cache"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_framework"
        android:title="@string/settings_framework"
        android:visible="false"
        app:showAsAction="never" />
</menu>