<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_import_file"
        android:orderInCategory="1"
        android:title="@string/import_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_all_as_text"
        android:orderInCategory="2"
        android:title="@string/share_all_as_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_all_as_file"
        android:orderInCategory="2"
        android:title="@string/share_all_as_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_all"
        android:orderInCategory="3"
        android:title="@string/export_all"
        app:showAsAction="never" />
</menu>