<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export_selected"
        android:orderInCategory="2"
        android:title="@string/export_selected"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_selected_as_text"
        android:orderInCategory="3"
        android:title="@string/share_selected_as_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_selected_as_file"
        android:orderInCategory="4"
        android:title="@string/share_selected_as_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:checkable="true"
        android:enabled="true"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:orderInCategory="1"
        android:title="@string/select_all"
        android:visible="true"
        app:showAsAction="ifRoom" />


</menu>