<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:defaultValue="0"
        android:key="publishers"
        android:title="@string/title_publish_list"
        app:iconSpaceReserved="false" />

    <Preference
        android:defaultValue="0"
        android:key="virtual_scanning_sources"
        android:title="@string/virtual_scanning_sources"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:key="com.troido.bless.ScanMode#preferred"
        android:title="Scan Mode"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="keep_screen_on"
        android:title="@string/keep_screen_on"
        app:iconSpaceReserved="false" />

</PreferenceScreen>