<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_padding_content">

            <CheckedTextView
                android:id="@+id/view_less"
                style="@style/ChipView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition_less" />

            <CheckedTextView
                android:id="@+id/view_equal"
                style="@style/ChipView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_padding_conditions"
                android:text="@string/condition_equal" />

            <CheckedTextView
                android:id="@+id/view_more"
                style="@style/ChipView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_padding_conditions"
                android:text="@string/condition_more" />
        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/view_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_padding_content"
        android:hint="@string/condition_value_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

</LinearLayout>