<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/manufacturer_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.circularreveal.CircularRevealGridLayout
            android:id="@+id/circlerViewGrid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <!--Row 1-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/manufacturer" />

            <TextView
                android:id="@+id/tv_manufacturer"
                style="@style/TextAppearance.Tiny"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="end"
                tools:text="Aconno" />

            <!--Row 2-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/model" />

            <TextView
                android:id="@+id/tv_model"
                style="@style/TextAppearance.Tiny"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="end"
                tools:text="Beacon++" />

            <!--Row 3-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/software_version" />

            <TextView
                android:id="@+id/tv_sw_version"
                style="@style/TextAppearance.Tiny"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="end"
                tools:text="nRF52-SDK13.0" />

            <!--Row 4-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/hardware_version" />

            <TextView
                android:id="@+id/tv_hw_version"
                style="@style/TextAppearance.Tiny"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="end"
                tools:text="MODEL_1" />

            <!--Row 5-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/firmware_version" />

            <TextView
                android:id="@+id/tv_fw_version"
                style="@style/TextAppearance.Tiny"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="end"
                tools:text="2.1.45" />


            <!--Row 6-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:text="@string/mac_address" />

            <TextView
                android:id="@+id/tv_address"
                style="@style/TextAppearance.Tiny"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="end"
                tools:text="AA:BB:CC:DD:EE:FF" />
        </com.google.android.material.circularreveal.CircularRevealGridLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
